--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -14,8 +14,10 @@
   "dependencies": {
     "@angular/animations": "~11.2.10",
     "@angular/cdk": "^11.2.12",
+    "@angular/cli": "^12.1.2",
     "@angular/common": "~11.2.10",
     "@angular/compiler": "~11.2.10",
+    "@angular/compiler-cli": "^11.2.14",
     "@angular/core": "~11.2.10",
     "@angular/forms": "~11.2.10",
     "@angular/material": "^11.2.12",
@@ -26,13 +28,12 @@
     "d3-celestial": "^0.7.35",
     "express": "^4.17.1",
     "http-server": "^0.12.3",
+    "npm": "^7.20.0",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "typescript": "~4.1.5",
-    "zone.js": "~0.11.3",
-    "@angular/cli": "^12.1.2",
-    "@angular/compiler-cli": "^11.2.14"
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.9",
